Inmob-Salesforce/force-app/main/default/objects/Proyecto__c/Proyecto__c.object-meta.xml
<CustomObject>
    <label>Proyecto</label>
    <nameField>
        <label>Nombre de Proyecto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proyectos</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>