Inmob-Salesforce/force-app/main/default/objects/Proyecto__c/fields/CI_Direccion_Proyecto__c.field-meta.xml
<CustomField>
    <fullName>CI_Direccion_Proyecto__c</fullName>
    <label>Dirección del Proyecto</label>
    <type>TextArea</type>
</CustomField>