Inmob-Salesforce/force-app/main/default/objects/Proyecto__c/fields/CI_Porcentaje_Penalidad__c.field-meta.xml
<CustomField>
    <fullName>CI_Porcentaje_Penalidad__c</fullName>
    <label>Porcentaje de Penalidad</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>