Inmob-Salesforce/force-app/main/default/objects/Proyecto__c/fields/CI_Provincia__c.field-meta.xml
<CustomField>
    <fullName>CI_Provincia__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provincia</label>
    <referenceTo>Provincia__c</referenceTo>
    <relationshipLabel>Proyectos</relationshipLabel>
    <relationshipName>Proyectos</relationshipName>
    <type>Lookup</type>
</CustomField>