Inmob-Salesforce/force-app/main/default/objects/Proyecto__c/fields/ComentarioCotizacion__c.field-meta.xml
<CustomField>
    <fullName>ComentarioCotizacion__c</fullName>
    <label>Comentario de Cotización</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>