Inmob-Salesforce/force-app/main/default/objects/Proyecto__c/fields/CorreosVentaNueva__c.field-meta.xml
<CustomField>
    <fullName>CorreosVentaNueva__c</fullName>
    <inlineHelpText>Los correos deben ir separados por comas.</inlineHelpText>
    <label>Correos venta nueva</label>
    <type>TextArea</type>
</CustomField>