Inmob-Salesforce/force-app/main/default/objects/Proyecto__c/fields/Dia_de_Vigencia__c.field-meta.xml
<CustomField>
    <fullName>Dia_de_Vigencia__c</fullName>
    <label>Dia de Vigencia</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>