Inmob-Salesforce/force-app/main/default/objects/Proyecto__c/fields/DiasAnulacionCotizacion__c.field-meta.xml
<CustomField>
    <fullName>DiasAnulacionCotizacion__c</fullName>
    <label>Días para anulación de cotización</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>