Inmob-Salesforce/force-app/main/default/objects/Proyecto__c/fields/Empresa__c.field-meta.xml
<CustomField>
    <fullName>Empresa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Empresa</label>
    <referenceTo>Empresa__c</referenceTo>
    <relationshipLabel>Proyectos</relationshipLabel>
    <relationshipName>Proyectos</relationshipName>
    <type>Lookup</type>
</CustomField>