Inmob-Salesforce/force-app/main/default/objects/Proyecto__c/fields/Maximo_de_Cuotas__c.field-meta.xml
<CustomField>
    <fullName>Maximo_de_Cuotas__c</fullName>
    <label>Maximo de Cuotas</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>