Inmob-Salesforce/force-app/main/default/objects/Proyecto__c/fields/Minimo_Reserva__c.field-meta.xml
<CustomField>
    <fullName>Minimo_Reserva__c</fullName>
    <label>Minimo Reserva</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>