Inmob-Salesforce/force-app/main/default/objects/Proyecto__c/fields/mostrarPromocionesCotizacion__c.field-meta.xml
<CustomField>
    <fullName>mostrarPromocionesCotizacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mostrar Promociones Cotización</label>
    <type>Checkbox</type>
</CustomField>