Inmob-Salesforce/force-app/main/default/objects/Proyecto__c/fields/ParametroEntradaEntrega__c.field-meta.xml
<CustomField>
    <fullName>ParametroEntradaEntrega__c</fullName>
    <label>ParametroEntradaEntrega</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>