Inmob-Salesforce/force-app/main/default/objects/Proyecto__c/fields/Usuario_Correo__c.field-meta.xml
<CustomField>
    <fullName>Usuario_Correo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuario Correo</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Proyectos1</relationshipName>
    <type>Lookup</type>
</CustomField>