Inmob-Salesforce/force-app/main/default/objects/Proyecto__c/fields/Usuario_Resposable__c.field-meta.xml
<CustomField>
    <fullName>Usuario_Resposable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuario Dado de Baja</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Proyectos</relationshipName>
    <type>Lookup</type>
</CustomField>