Inmob-Salesforce/force-app/main/default/objects/Proyecto__c/fields/UsuarioResposable__c.field-meta.xml
<CustomField>
    <fullName>UsuarioResposable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UsuarioResposable</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Proyectos2</relationshipName>
    <type>Lookup</type>
</CustomField>