Inmob-Salesforce/force-app/main/default/objects/Proyecto__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Codigo_Proyecto__c</columns>
    <columns>NAME</columns>
    <columns>Codigo_Empresa__c</columns>
    <columns>Empresa__c</columns>
    <columns>CI_Estado__c</columns>
    <columns>Usuario_Resposable__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>